@@ -1166,7 +1166,7 @@ u_memory(long *stats)
  */
 
 void
-i_swap(long *stats)
+i_swap(struct swap_t *stats)
 {
 	if (num_swap > 0)
 	{
@@ -1174,17 +1174,23 @@ i_swap(long *stats)
 		display_write(0, y_swap, 0, 0, "Swap: ");
 
 		/* format and print the swap summary */
-		summary_format_memory(x_swap, y_swap, stats, swap_names, swap_cidx);
+		summary_format_memory(x_swap, y_swap, stats->swap, swap_names,
+				swap_cidx);
+		display_fmt(-1, y_swap, 0, 0, ", Swapped in: %s, Swapped Out: %s",
+				format_k(stats->swapin), format_k(stats->swapout));
 	}
 }
 
 void
-u_swap(long *stats)
+u_swap(struct swap_t *stats)
 {
 	if (num_swap > 0)
 	{
 		/* format the new line */
-		summary_format_memory(x_swap, y_swap, stats, swap_names, swap_cidx);
+		summary_format_memory(x_swap, y_swap, stats->swap, swap_names,
+				swap_cidx);
+		display_fmt(-1, y_swap, 0, 0, ", Swapped in: %s, Swapped Out: %s",
+				format_k(stats->swapin), format_k(stats->swapout));
 	}
 }
 
