@@ -26,8 +26,8 @@ void		u_cpustates(int64_t * states);
 void		z_cpustates();
 void		i_memory(long *stats);
 void		u_memory(long *stats);
-void		i_swap(long *stats);
-void		u_swap(long *stats);
+void		i_swap(struct swap_t *stats);
+void		u_swap(struct swap_t *stats);
 void		i_message();
 void		u_message();
 void		i_header(char *text);
