@@ -15,6 +15,7 @@ Release 4.0.0
        argument or 'R' command
      * Add 'a' command to switch to top 'activity' processes, the default,
        while removing the 'I' for the top I/O display as a toggle
+     * Show swapping activity
 
 Release 3.7.0
 
